# doleckijakub.pl

./: LICENSE  Makefile  README.md  docker-compose.yml  endpoint-dispatcher.cpp  example.env  main.cpp  profiler.cpp  profiler.hpp  server
.secrets/endpoints/: tor.secret.example
api/: Cargo.toml  Dockerfile
api/src/: main.rs
endpoints/: index.cpp  tor_stats.cpp
nginx/: nginx.conf
src/: logger.hpp  main.cpp  request.cpp  request.hpp  server.cpp  server.hpp
static/: index.css  index.html  index.js  style.css
web/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/blocks/: GithubStats.tsx  Hero.tsx  Projects.tsx  TechStack.tsx
web/src/components/icons/: GithubIcon.tsx  GlobeIcon.tsx  LinkedinIcon.tsx  TechIcon.tsx
web/src/components/layout/: Container.tsx  Header.tsx
web/src/components/ui/: Section.tsx
web/src/types/: react-calendar-heatmap.d.ts
