[package]
name = "api"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["clock"] }
once_cell = "1.21.4"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
